test/Transforms/PCLLowering/pcl_lowering_fail.llzk
// REQUIRES: with-pcl
// RUN: llzk-opt -I %S -split-input-file -llzk-to-pcl -verify-diagnostics %s

// Expect the test to fail because the ComponentA2's constrain arg is not a felt
!F = !felt.type
module attributes {veridise.lang = "llzk"} {
  struct.def @ComponentA2 {
    function.def @compute(%p: !struct.type<@ComponentA1>) -> !struct.type<@ComponentA2> {
      %self = struct.new : !struct.type<@ComponentA2>
      %r = struct.readf %p[@f1] : !struct.type<@ComponentA1>, !array.type<4,3 x !F>
      function.return %self : !struct.type<@ComponentA2>
    }

    // expected-error@+1 {{Constrain function's args are expected to be felts. Found '!struct.type<@ComponentA1>'for arg #: 1}}
    function.def @constrain(%self: !struct.type<@ComponentA2>, %p: !struct.type<@ComponentA1>) {
      function.return
    }
  }

  struct.def @ComponentA1 {
    struct.member @f1 : !array.type<4,3 x !F>

    function.def @constrain(%self: !struct.type<@ComponentA1>) { function.return }
    function.def @compute() -> !struct.type<@ComponentA1> {
      %self = struct.new : !struct.type<@ComponentA1>
      function.return %self : !struct.type<@ComponentA1>
    }
  }
}

// -----

// Expect the test to fail because the ComponentA1 has a non-felt field
!F = !felt.type
module attributes {veridise.lang = "llzk"} {
  struct.def @ComponentA1 {
    // expected-error@+1 {{Field must be felt type. Found '!array.type<4,3 x !felt.type>' for field: f1}}
    struct.member @f1 : !array.type<4,3 x !F>

    function.def @constrain(%self: !struct.type<@ComponentA1>) { function.return }
    function.def @compute() -> !struct.type<@ComponentA1> {
      %self = struct.new : !struct.type<@ComponentA1>
      function.return %self : !struct.type<@ComponentA1>
    }
  }
}
